--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@kennethha991/kentea",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Quest for tea.xyz",
   "main": "index.js",
   "author": "@kennethha991",
   "repository": "https://github.com/kennethha991/kentea.git",
-  "license": "ISC"
+  "license": "MIT"
 }
